--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,16 +1,37 @@
 trigger:
 - main
 
-strategy:
-  matrix:
-    linux:
-      operatingSystem: 'ubuntu-latest'
-    mac:
-      operatingSystem: 'macos-latest'
+#strategy:
+#  matrix:
+#    linux:
+#      operatingSystem: 'ubuntu-latest'
+#    mac:
+#      operatingSystem: 'macos-latest'
 
 pool:
   vmImage: $(operatingSystem)
 
-steps:
-- script: echo Running on $(operatingSystem)
-  displayName: 'Run a one-line script'
+stages:
+  - stage: Build
+    jobs:
+      - job: BuildJob
+        steps:
+          - bash: 'Do the build'
+  - stage: DevDeploy
+    jobs:
+      - deployment: DevDeployJob
+        environment: Dev
+        strategy:
+          runOnce:  # corre todo a la vez
+            deploy:
+              steps:
+                - script: echo deploy to Dev
+  - stage: QADeploy
+    jobs:
+      - deployment: QADeployJob
+        environment: QA        
+        strategy:
+          runOnce:  # corre todo a la vez
+            deploy:
+              steps:
+                - script: echo deploy to QA      
